[package]
name = "questionnaire-transformer"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.4.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]

[[bin]]
name = "question_transform"
path = "src/main.rs"

[lib]
name = "questionnaire_transformer"
path = "src/lib/lib.rs"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
scraper = "0.14.0"
